Fix footer spacing

--- a/style/index.css
+++ b/style/index.css
@@ -194,6 +194,10 @@ p {
   margin: 1rem auto;
 }
 
+footer > p {
+  margin-top: 0;
+}
+
 dl, ol, ul {
   margin-top: 0;
   margin-bottom: 1rem;
